# rvjump

./: .gitignore  .gitmodules  IsometricCamera.gd  export_presets.cfg  godot.svg.import  icon.svg.import  project.godot  rvgodot.sln
UI/: Title Screen.svg.import  TutorialText.gd  credits.svg.import  interface.tscn  pause.svg.import  rewind.svg.import  rsicv_syntax_highlighter.tres  rv lineart.svg.import  rvJUMP!.svg.import  settings.svg.import  start.svg.import
UI/buttons/: back_button.svg.import  credits.svg.import  levels.svg.import  manual.svg.import  pause.svg.import  play.svg.import  rewind.svg.import  settings.svg.import  start.svg.import
UI/fonts/: Jua.ttf.import  SpaceMono.ttf.import
assets/: rv.vox.obj.import  rv.vox.png.import
gd_extensions/: CMakeLists.txt
gd_extensions/vrv/: vrv_ext.cc  vrv_ext.h
models/: island_basic.vox.mtl  island_basic.vox.obj.import  island_basic.vox.png.import  island_finish.vox.mtl  island_finish.vox.obj.import  island_finish.vox.png.import  island_turn.vox.mtl  island_turn.vox.obj.import  island_turn.vox.png.import  rv.vox.mtl  rv.vox.obj.import  rv.vox.png.import
scenes/: FinishCollider.gd  base_level.tscn  credits.tscn  level.gd  level_select.tscn  node_3d.tscn  rv.gd  rv.vox.ply  title_screen.tscn  unity_demo.tscn
src/: GameManager.gd  TextEditor.gd  TitleScreenAnimation.gd  canvas_manager.gd  codeHighlighter.gd  game_camera.gd  game_enums.gd  game_manager.gd  pseudo_parser.gd  rv.gd  rvCamera.gd  rv_animate.gd  scene_transitioner.gd
src/menu/: code_editor.gd  (+2 more)
themes/: editor_theme.tres
web/: Cargo.toml  model.js
(+19 files in other folders)
